tests/typechecker/should_fail/dot_operator_pattern_matching_2.csp
channel b : Int

fst(x.y) = x
snd(x.y) = y

testPatternMatch1 = fst(b.0) == 0
